@@ -3,10 +3,12 @@ package com.codesoftlution.petNova.user_microservice.models;
 import jakarta.persistence.*;
 import lombok.*;
 import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
 import java.time.LocalDateTime;
 import java.util.Collection;
+import java.util.Collections;
 import java.util.List;
 
 @Entity
@@ -16,7 +18,7 @@ import java.util.List;
 @NoArgsConstructor
 @AllArgsConstructor
 @Table(name = "users")
-public class UserModel implements UserDetails {
+public class UserModel implements UserDetails{
 
     @Id
     @GeneratedValue(strategy = GenerationType.IDENTITY)
@@ -59,8 +61,32 @@ public class UserModel implements UserDetails {
 
     private Long officeId;
 
+    // Implementación de UserDetails
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return List.of(() -> "ROLE_" + role.getRoleName());
+        if (role == null) {
+            return Collections.emptyList();
+        }
+        return Collections.singletonList(new SimpleGrantedAuthority("ROLE_" + role.getRoleName()));
+    }
+
+    @Override
+    public boolean isAccountNonExpired() {
+        return true; // Puedes personalizar esto si necesitas lógica de expiración
+    }
+
+    @Override
+    public boolean isAccountNonLocked() {
+        return true; // Puedes personalizar esto
+    }
+
+    @Override
+    public boolean isCredentialsNonExpired() {
+        return true; // Puedes personalizar esto
+    }
+
+    @Override
+    public boolean isEnabled() {
+        return active; // Usa el campo 'active' para determinar si el usuario está habilitado
     }
 }
